# pyxdaq-fu

./: DK_README.md  JIW_python_files_report.md  channel_config.json  latency.csv  latency2.csv  latency3.csv  latency4.csv  tmp96h_4852.json  tmpvkpbjkh4.json
Intan-RHX-xdaq-v1.3.0/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
Intan-RHX-xdaq-v1.3.0/.github/workflows/: build.yml
Intan-RHX-xdaq-v1.3.0/Engine/API/Abstract/: abstractrhxcontroller.cpp  abstractrhxcontroller.h
Intan-RHX-xdaq-v1.3.0/Engine/API/Hardware/: controller_info.cpp  controller_info.h  rhxcontroller.cpp  rhxcontroller.h  rhxdatablock.cpp  rhxdatablock.h  rhxglobals.h
Intan-RHX-xdaq-v1.3.0/Engine/API/Synthetic/: playbackrhxcontroller.cpp  playbackrhxcontroller.h  syntheticrhxcontroller.cpp  syntheticrhxcontroller.h
Intan-RHX-xdaq-v1.3.0/Engine/Processing/: commandparser.cpp  controllerinterface.cpp  controllerinterface.h  datastreamfifo.h  impedancereader.cpp  impedancereader.h  minmax.h  signalsources.cpp  stimparametersclipboard.cpp  systemstate.cpp  systemstate.h  waveformfifo.h  xmlinterface.cpp
Intan-RHX-xdaq-v1.3.0/Engine/Processing/DataFileReaders/: fileperchannelmanager.cpp
Intan-RHX-xdaq-v1.3.0/Engine/Processing/SaveManagers/: filepersignaltypesavemanager.cpp
Intan-RHX-xdaq-v1.3.0/Engine/Processing/XPUInterfaces/: gpuinterface.cpp
Intan-RHX-xdaq-v1.3.0/Engine/Threads/: audiothread.cpp  usbdatathread.cpp  usbdatathread.h
Intan-RHX-xdaq-v1.3.0/GUI/Dialogs/: boardselectdialog.cpp  boardselectdialog.h  demodialog.cpp  stimparamdialog.cpp
Intan-RHX-xdaq-v1.3.0/GUI/Widgets/: controlpanel.cpp  controlpanel.h  testcontrolpanel.cpp
Intan-RHX-xdaq-v1.3.0/GUI/Windows/: controlwindow.cpp
Intan-RHX-xdaq-v1.3.0/cmake/: codesign.cmake
Intan-RHX-xdaq-v1.3.0/contrib/ci/: install-deps-deb.sh
autoresearch/: __init__.py  _session_worker.py  config_manager.py  constraints.py  experiment_runner.py  metrics.py  perturbations.py  program.md  researcher.py  results_logger.py
autoresearch_training/: __init__.py  _training_session_worker.py  constraints.py  control.py  learning.py  program.md  regime_logger.py  researcher.py  session_runner.py  stimulation.py
latency_figures/: latency_summary.csv
pyxdaq/: simulated_xdaq.py  test.py
pyxdaq/tools/: self_diagnosis.py
scripts/: plot_latency_report.py
xdaq_rl/: README.md  __init__.py  config.py  types.py
xdaq_rl/buffer/: __init__.py  ring_buffer.py
xdaq_rl/env/: __init__.py  minigym.py  xdaq_env.py
xdaq_rl/features/: __init__.py  base.py  basic.py
xdaq_rl/hardware/: __init__.py  base.py  pyxdaq_backend.py  simulated_backend.py
xdaq_rl/logging/: replay_writer.py
xdaq_rl/runtime/: __init__.py  acquisition.py  factory.py
xdaq_rl/sim/: __init__.py
xdaq_rl/training/: __init__.py  run_random.py
